********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.9.0
=============
- Correction in Wendland1 and Wendland2 covariance functions (polynomial formula)
- Take Sample Selection into account in early phases of Moving Neighborhood search
- New API functions for launching Gradient and Potential based methods


Release 1.8.0
=============
- Export all gstlearn classes and functions through a C++ namespace 'gstlrn" (#108)
- Replace all integers (32 bits) with long (64 bits) using 'Id' type (#446)
- Neutral files are dumped in HDF5 format in the current directory by default (#570)
- The internal variable 'flagCheck' in Gibbs is set to FALSE be default (to speed up processing)
- The names of neutral files generated by non-regression tests have been normalized
- Modernizing and cleaning the SPDE APIs. Consequently:
  - db_kriging2D_SPDE function has disappeared
  - class PGSSPDE has been deleted
- Correcting the output of weights for Global estimation by Kriging
- Enclose the library in a namespace ("gstlrn")
- Fix gstlearn_to_terra and terra_to_gstlearn (#566)
- ACov* is now stored as a shared_ptr in ModelGeneric, CovList (vector) and CovBase
- ACov does not inherit from ASpaceObject anymore (and it becomes AStringable)
- Add constants MINIMUM_BIG (-1.e30) and MAXIMUM_BIG (1.e30)
- Class Pile has been suppressed as not used anymore
- Classes CGParams et SPDEParams are made Stringable (display methos available)
- Fix neighborhood with screen (#639)
- Make possible to install the static library (#630)
- Fix a bug using VarioParam::createMultipleFromGrid when having objects with various-space dimension (#612)


Release 1.7.4
=============
- Fix SEGY importation procedure for grid files

Release 1.7.3
=============
- Fix plots of model in the case of multi-direction variograms in Python

Release 1.7.2
=============
- Fix memory leak in Python Swig wrapper

Release 1.7.1
=============