@@ -8,10 +8,9 @@
 /* License: BSD 3-clause                                                      */
 /*                                                                            */
 /******************************************************************************/
-#include "Basic/Memory.hpp"
 
 #if defined(WIN32) || defined(_WIN32) || defined(__WIN32) && !defined(__CYGWIN__)
-#include <windows.h>
+#  include <windows.h>
 
 unsigned long long getTotalSystemMemory()
 {
@@ -20,10 +19,10 @@ unsigned long long getTotalSystemMemory()
   if (GlobalMemoryStatusEx(&status) == 0) return 0;
   return status.ullTotalPhys;
 }
-#elif defined (__APPLE__)
-#include <sys/types.h>
-#include <sys/sysctl.h>
-#include <sys/vmmeter.h>
+#elif defined(__APPLE__)
+#  include <sys/sysctl.h>
+#  include <sys/types.h>
+#  include <sys/vmmeter.h>
 
 unsigned long long getTotalSystemMemory()
 {
@@ -32,7 +31,7 @@ unsigned long long getTotalSystemMemory()
   struct vmtotal vmt;
   size_t vmt_size, uint_size;
 
-  vmt_size = sizeof(vmt);
+  vmt_size  = sizeof(vmt);
   uint_size = sizeof(page_size);
 
   rc = sysctlbyname("vm.vmtotal", &vmt, &vmt_size, NULL, 0);
@@ -46,12 +45,12 @@ unsigned long long getTotalSystemMemory()
 
 #else // assume Linux
 
-#include <unistd.h>
+#  include <unistd.h>
 
 unsigned long long getTotalSystemMemory()
 {
   long avail_pages = sysconf(_SC_AVPHYS_PAGES);
-  long page_size = sysconf(_SC_PAGE_SIZE);
+  long page_size   = sysconf(_SC_PAGE_SIZE);
   if (avail_pages < 0 || page_size < 0) return 0;
   return avail_pages * page_size;
 }
