@@ -7,6 +7,7 @@ Release 1.9.0
 - Correction in Wendland1 and Wendland2 covariance functions (polynomial formula)
 - Take Sample Selection into account in early phases of Moving Neighborhood search
 - New API functions for launching Gradient and Potential based methods
+- The old-style memory management is not used anymore (mem_alloc, mem_free, ...)
 
 
 Release 1.8.0
